corrections: closing tag deleted,  video url added, overflow feature changed to hidden, width of the video list increased

--- a/VideoPlaylist/src/app/components/video-details/video-details.component.scss
+++ b/VideoPlaylist/src/app/components/video-details/video-details.component.scss
@@ -10,11 +10,13 @@
   
     .video-player{
       align-self: center;
+      width: 70%;
+      height:300px;
     }
     .details {
       margin: auto;
       margin: auto;
-      overflow: scroll;
+      overflow: hidden;
       p {
         background: whitesmoke;
         padding: 20px;
